fix: ice-design-pro menu collapse (#1550)

--- a/react-materials/scaffolds/ice-design-pro/src/layouts/BasicLayout/components/Aside/index.scss
+++ b/react-materials/scaffolds/ice-design-pro/src/layouts/BasicLayout/components/Aside/index.scss
@@ -21,6 +21,14 @@
         border-radius: $corner-2;
       }
     }
+    .collapse-btn {
+      cursor: pointer;
+      display: block;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 20px;
+      color: white;
+    }
 
     .menu-btn {
       position: fixed;
